--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js" type="text/javascript" charset="utf-8" ></script>
 </head>
-<body>
-	
+<body ng-controller="FirstCtrl">
+	{{"Hola" + nombre}}
 </body>
 </html>
