--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="MyFirstModule">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
 	<link rel="stylesheet" href="">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js" type="text/javascript" charset="utf-8" ></script>
+	<script src="controller.js" type="text/javascript" charset="utf-8" ></script>
 </head>
 <body ng-controller="FirstCtrl">
 	{{"Hola" + nombre}}
